Change pattern to hexagonal
