# docs/swagger.json
@@ -4,6 +4,27 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/category/Get/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "category"
+                ],
+                "summary": "Получить категорию",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Идентификатор категории",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/category/create": {
             "post": {
                 "description": "Добавляет категорию",
@@ -21,7 +42,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/category.CreateCategoryCommand"
+                            "$ref": "#/definitions/category.CreateCategory"
                         }
                     }
                 ],
@@ -58,17 +79,6 @@
                     "category"
                 ],
                 "summary": "Получить список категорий",
-                "parameters": [
-                    {
-                        "description": "Тело запроса",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/category.GetCategoryQuery"
-                        }
-                    }
-                ],
                 "responses": {}
             }
         },
@@ -88,7 +98,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/category.UpdateCategoryCommand"
+                            "$ref": "#/definitions/category.UpdateCategory"
                         }
                     }
                 ],
@@ -97,9 +107,15 @@
         }
     },
     "definitions": {
-        "category.CreateCategoryCommand": {
+        "category.CreateCategory": {
             "type": "object",
             "properties": {
+                "childs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "name": {
                     "type": "string"
                 },
@@ -108,10 +124,7 @@
                 }
             }
         },
-        "category.GetCategoryQuery": {
-            "type": "object"
-        },
-        "category.UpdateCategoryCommand": {
+        "category.UpdateCategory": {
             "type": "object",
             "properties": {
                 "id": {
